Stop helper only if formerly started.

Differential Revision: https://phabricator.kde.org/D25161
BUG: 413851